# my_first_try_in_automation

./: README.md  conftest.py  pyproject.toml  test_items.py
