[tool.poetry]
name = "my_first_try_in_automation"
version = "0.1.0"
description = ""
authors = ["I'am"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.2.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
